--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 <body>
 
   <main>
-    <img class="left" src="images/grain-left.svg" alt="">
-    <img class="right" src="images/grain-right.svg" alt="">
-    <h1>Grains</h1>
-    <ul>
-      <li>Home</li>
-      <li>Cereal</li>
-      <li>Legumes</li>
-    </ul>
+    <header>
+      <img class="left" src="images/grain-left.svg" alt="">
+      <img class="right" src="images/grain-right.svg" alt="">
+      <h1>Grains</h1>
+    </header>
+    <header>
+      <nav>
+        <ul>
+          <li class="home">Home</li>
+          <li class="cereals">Cereals</li>
+          <li class="legumes">Legumes</li>
+        </ul>
+      </nav>
+    </header>
   </main>
 
 </body>
