--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
       <nav>
         <ul>
-          <li class="home">Home</li>
-          <li class="cereals">Cereals</li>
-          <li class="legumes">Legumes</li>
+          <li><a class="home">Home</a></li>
+          <li><a class="cereals">Cereals</a></li>
+          <li><a class="legumes">Legumes</a></li>
         </ul>
       </nav>
     </header>
